# AutoCryptoBench

./: .env.clone  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: README.md  __init__.py  claude_thinking_agent.py  helpers.py
agents/just_bash/: __init__.py
agents/simple/: __init__.py  tools.py
agents/simple_claude_mouse/: __init__.py  ask_claude.py
agents/text_only/: __init__.py
docker/: README.md
docker/desktop_base/: Dockerfile  docker-compose.yml  entrypoint.sh  supervisord.conf
docker/desktop_base/autostart/: xsettings.desktop
docker/desktop_base/firefox/: policies.json
docker/desktop_metamask/: Dockerfile  README.md  docker-compose.yml  metamask_preloader.py  policies.json
docker/guarda_sim/: Dockerfile  README.md  docker-compose.yml
docker/guarda_sim/app/: app.py  guarda.html
docker/guarda_sim/app/static/: guarda.js
docker/point_farming_sim/: Dockerfile  README.md  docker-compose.yml
docker/point_farming_sim/app/: app.py  galaxy.html
docker/point_farming_sim/app/static/: galaxy.js  styles.css
docker/point_farming_sim/app/static/utils/: prices.js  templates.js
docker/text_only/: Dockerfile  README.md
tasks/: README.md
tasks/crypto/airdrops/airdrop_specified/: README.md  abstract.html  task.py
tasks/crypto/airdrops/airdrop_unspecified/: README.md  task.py
tasks/crypto/airdrops/point_farming_sim/: README.md  setup.sh  task.py
tasks/crypto/rewards_platforms/cointiply/: README.md  task.py
tasks/crypto/rewards_platforms/jumptask/: README.md  task.py
tasks/crypto/rewards_platforms/rewards_e2e/: README.md  task.py
tasks/crypto/staking/lido_fi/: README.md  task.py
tasks/crypto/staking/staking_generic/: README.md  setup.sh  task.py
tasks/crypto/wallets/guarda_import/: README.md  setup.sh  task.py
tasks/crypto/wallets/metamask/: README.md  task.py
tasks/crypto/wallets/monero_generic/: README.md  task.py
tasks/portfolio_management/crypto2crypto/complex_conversion/: README.md  task.py
tasks/portfolio_management/crypto2crypto/cross_chain/: README.md  setup.sh  task.py
tasks/portfolio_management/crypto2crypto/guarda_sim/: README.md  task.py
tasks/portfolio_management/crypto2crypto/same_chain/: README.md  task.py
tasks/scaling_operations/bitlaunch_create_server/: README.md  task.py  utils.py
tasks/scaling_operations/find_crypto_vps/: README.md  bitcoin-vps.txt  extract_plausible_vps.py  plausible_vps.txt  task.py  utils.py
tasks/scaling_operations/subagent_e2e/: README.md  task.py
tasks/scaling_operations/subagent_local/: README.md  task.py
tasks/simple_examples/hello_world/: setup.sh  task.py
tasks/simple_examples/wait_before_start_task/: README.md  task.py
tasks/template/: setup.sh  task.py
tests/: conftest.py  test_no_host_env_vars.py  test_register_existing_sandbox.py
tests/agents/simple/: test_tools.py
tests/tasks/: test_eval_asserts.py
tests/tasks/crypto/airdrops/point_farming_sim/: test_task.py
tests/tasks/crypto/wallets/guarda_import/: test_task.py
tests/tasks/crypto/wallets/metamask/: test.xpi  test_task.py
tests/tasks/crypto/wallets/monero_generic/: test_task.py
tests/tasks/portfolio_management/crypto2crypto/guarda_sim/: test_task.py
tests/tasks/scaling_operations/find_crypto_vps/: test_task.py
tests/tasks/simple_examples/hello_world/: test_task.py
utils/: __init__.py  approvers.py
utils/sandbox/: __init__.py  _compose.py  _register.py
